--- a/index.html
+++ b/index.html
@@ -19,7 +19,25 @@
           </button>
         </div>
       </div>
+
+      <div class="content">
+        <h1>Amazing Article</h1>
+        <small>Floren Pop</small>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt quaerat, libero impedit nulla quasi sapiente cupiditate quis praesentium corrupti velit illo optio neque placeat molestiae sit, doloribus quas harum at debitis sequi. Debitis numquam voluptatum, commodi in aliquid maiores officia fugiat, optio atque quia, voluptatem modi dolorum incidunt consectetur quae?</p>
+
+        <h3>My Dog</h3>
+        <img src="https://images.unsplash.com/photo-1507146426996-ef05306b995a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80" alt="doggy" />
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum odio nihil delectus qui laborum consectetur asperiores est magni facilis architecto beatae aperiam incidunt perferendis ipsam quibusdam, fugiat numquam doloribus, voluptatum error nisi. Maiores, sed totam?</p>
+      </div>
     </div>
+
+    <nav>
+      <ul>
+        <li><i class="fas fa-home"></i>Home</li>
+        <li><i class="fas fa-user-alt"></i>About</li>
+        <li><i class="fas fa-envelope"></i>Contact</li>
+      </ul>
+    </nav>
     <script src="./app.js"></script>
   </body>
 </html>
